ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - rancher.vindpro.com
    secretName: hello-kubernetes-tls
  rules:
  - host: rancher.vindpro.com
    http:
      paths:
      - backend:
          serviceName: rancher
          servicePort: 80
